feat: add Next.js frontend with Stacks Connect integration
- Add marketplace, launchpad, staking, and services pages
- Add wallet connection with Stacks Connect
- Add contract interaction utilities
- Update .gitignore for sensitive files

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ node_modules/
 # Deployment & Transaction Scripts (SENSITIVE)
 **/scripts/
 **/deployments/
+**/transaction-generator.js
 
 # Clarinet sensitive files
 **/settings/Mainnet.toml
