--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,11 +11,13 @@
   "dependencies": {
     "@reown/appkit": "^1.8.15",
     "@reown/appkit-adapter-wagmi": "^1.8.15",
+    "@solana/kit": "^3.0.3",
     "@stacks/auth": "^7.3.1",
     "@stacks/connect": "^8.2.4",
     "@stacks/network": "^7.3.1",
     "@stacks/transactions": "^7.3.1",
     "@tanstack/react-query": "^5.90.12",
+    "axios": "^1.13.2",
     "buffer": "^6.0.3",
     "crypto-browserify": "^3.12.1",
     "next": "16.1.1",
