--- a/.gitignore
+++ b/.gitignore
@@ -7,8 +7,8 @@ node_modules/
 .env.*.local
 *.env
 
-# Deployment & Transaction Scripts (SENSITIVE)
-**/scripts/
+# Sensitive tools (DO NOT COMMIT)
+**/functions/
 **/deployments/
 **/transaction-generator.js
 
