chore: update project metadata in Clarinet.toml

--- a/stackhub-contracts/Clarinet.toml
+++ b/stackhub-contracts/Clarinet.toml
@@ -1,7 +1,7 @@
 [project]
 name = 'stackhub-contracts'
-description = ''
-authors = []
+description = 'DeFi Platform Contracts for StackHub'
+authors = ['AdekunleBamz']
 telemetry = true
 cache_dir = './.cache'
 requirements = []
