--- a/stackhub-contracts/Clarinet.toml
+++ b/stackhub-contracts/Clarinet.toml
@@ -1,3 +1,5 @@
+# Main project configuration
+# Defines contracts, dependencies, and settings for the Clarinet runtime.
 [project]
 name = 'stackhub-contracts'
 description = 'DeFi Platform Contracts for StackHub'
