docs(frontend): add description to package.json

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,7 @@
 {
   "name": "frontend",
   "version": "0.1.0",
+  "description": "Next.js Frontend for StackHub Interface",
   "private": true,
   "scripts": {
     "dev": "next dev --webpack",
