docs(frontend): add author to package.json

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,6 +2,7 @@
   "name": "frontend",
   "version": "0.1.0",
   "description": "Next.js Frontend for StackHub Interface",
+  "author": "StackHub Team",
   "private": true,
   "scripts": {
     "dev": "next dev --webpack",
