docs(frontend): add license to package.json

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "description": "Next.js Frontend for StackHub Interface",
   "author": "StackHub Team",
+  "license": "MIT",
   "private": true,
   "scripts": {
     "dev": "next dev --webpack",
