--- a/stackhub-contracts/Clarinet.toml
+++ b/stackhub-contracts/Clarinet.toml
@@ -15,6 +15,8 @@ path = 'contracts/stackhub-nft-marketplace.clar'
 clarity_version = 4
 epoch = 'latest'
 
+# Contract: Service Registry
+# Logic for service providers to register and receive payments.
 [contracts.stackhub-service-registry]
 path = 'contracts/stackhub-service-registry.clar'
 clarity_version = 4
