--- a/stackhub-contracts/package.json
+++ b/stackhub-contracts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "stackhub-contracts-tests",
-  "version": "1.0.0",
+  "version": "2.0.0-v2q",
   "description": "Smart Contract Tests and Scripts for StackHub",
   "type": "module",
   "private": true,
